allow categories to be sorted

--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -12,7 +12,7 @@
   %>
 </div>
 
-<table class='table table-striped table-hover table-nonfluid datatable-admin'>
+<table class='table table-striped table-hover table-nonfluid datatable-admin table-categories'>
   <thead>
     <tr>
       <th></th>
@@ -29,9 +29,10 @@
     <% @categories.each do |category| %>
       <tr>
         <td>
-          <%= link_to t('shared.actions.view'),
-                      admin_category_path(category),
-                      class: 'btn btn-default' %>
+          <a class="move-up" href="#" data-url="<%= up_admin_category_path(category.slug) %>"
+              title="<%= t('shared.move_row.up')%>"><span class="glyphicon glyphicon-arrow-up" aria-hidden="true"></span></a>
+          <a class="move-down" href="#" data-url="<%= down_admin_category_path(category.slug) %>" 
+              title="<%= t('shared.move_row.down')%>"><span class="glyphicon glyphicon-arrow-down" aria-hidden="true"></span></a>
         </td>
 
         <td>
