--- a/app/views/application/_head.html.erb
+++ b/app/views/application/_head.html.erb
@@ -19,7 +19,7 @@
   <% if @experiment.present? && @experiment.thumbnail1.exists? %>
     <meta property="og:image" content="<%= full_url(@experiment.thumbnail1.url(:original)) %>" />
   <% end %>
-  <meta property="og:image" content="<%= full_url("/assets/fb-share.jpg") %>" />
+  <meta property="og:image" content="<%= asset_url("fb-share.jpg") %>" />
   <meta property="og:site_name" content="<%= t("shared.common.name") %>" />
 
 
