--- a/app/views/application/_loading_indicator.html.erb
+++ b/app/views/application/_loading_indicator.html.erb
@@ -1,3 +1,3 @@
 <div class='loading-indicator'>
-  <%= image_tag('loading_apple.gif', class: 'loading-indicator-image') %>
+  <%= inline_svg('loading_planets.svg', class: 'loading-indicator-image') %>
 </div>
