--- a/app/assets/stylesheets/components/loading_indicator.scss
+++ b/app/assets/stylesheets/components/loading_indicator.scss
@@ -15,3 +15,97 @@
     margin-top: $loading-indicator-size/-2;
     margin-left: $loading-indicator-size/-2;
   }
+
+
+.loading-indicator-image .planet_1 {
+  animation: planet_1 3s infinite;
+}
+
+.loading-indicator-image .planet_3 {
+  animation: planet_3 3s infinite;
+}
+
+.loading-indicator-image .planet_1_sub {
+  animation: planet_1_sub 3s infinite;
+}
+
+.loading-indicator-image .planet_3_sub {
+  animation: planet_3_sub 3s infinite;
+}
+
+.loading-indicator-image .planet_2 {
+  z-index: 5;
+}
+
+@keyframes planet_1 {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(150px);
+    opacity: 1;
+  }
+  50.1% {
+    opacity: 0;
+  }
+  100%{
+    transform: translateX(0);
+    opacity: 0;
+  }
+}
+
+@keyframes planet_1_sub {
+  0% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(150px);
+    opacity: 0;
+  }
+  50.1%{
+    opacity: 1;
+  }
+  100%{
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes planet_3 {
+  0% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+  50% {
+    transform: translateX(-150px);
+    opacity: 1;
+  }
+  50.1% {
+    opacity: 0;
+  }
+  100%{
+    transform: translateX(0);
+    opacity: 0;
+  }
+}
+
+@keyframes planet_3_sub {
+  0% {
+    transform: translateX(0);
+    opacity: 0;
+  }
+  50% {
+    transform: translateX(-150px);
+    opacity: 0;
+  }
+  50.1%{
+    opacity: 1;
+  }
+  100%{
+    transform: translateX(0);
+    opacity: 1;
+
+  }
+}
