--- a/app/views/shared/_experiment_show.html.erb
+++ b/app/views/shared/_experiment_show.html.erb
@@ -10,6 +10,9 @@
   end
 %>
 
+<%= link_to(image_tag("lobo.svg"), params.merge(:format => 'pdf')) %>
+
+
 <div class='exp-header-background category-background-color <%=category_slug%>'>
   <% img = image_path("categories/backgrounds/#{category_slug}.svg") %>
   <img class="up-left"  src=<%= img %>>
