--- a/app/assets/stylesheets/experiment_pdf.css
+++ b/app/assets/stylesheets/experiment_pdf.css
@@ -1,17 +1,9 @@
 
-@font-face
-{
-  font-family: 'BebasNeue-Bold';
-  font-style: normal;
-  src: image-url('app/assets/images/fonts/BebasNeue-Bold.otf') format('opentype');
-}
-
-
-
 body {
-	font-family: BebasNeue-Bold;
-	font-size: 12px;
-	line-height: 15px;
+	font-family: DejaVuSans;
+	font-size: 14px;
+	margin: 0;
+	padding: 0;
 }
 
 
@@ -21,15 +13,23 @@ body {
 }
 
 h1 {
-	font-size: 40px;
-	line-height: 45px;
+	font-size: 48px;
+	line-height: 50px;
 	font-family: BebasNeue-Bold;
+	word-break: normal; 
 }
 
 h3 {
-	font-size: 30px;
-	line-height: 30px;
-	margin: 40px 0;
+	font-size: 32px;
+	line-height: 34px;
+	margin: 25px 0;
+	text-align: center;
+	font-family: BebasNeue-Bold;
+
+}
+
+h4 {
+	font-family: BebasNeue-Bold;
 }
 
 img {
@@ -42,16 +42,19 @@ img {
 	display: -webkit-box; /* wkhtmltopdf uses this one */
     -webkit-box-pack: end; /* WebKit */
 	font-size: 13px;
+	margin-bottom: 20px;
 }
 	
 
 main {
-	width: 100%;
+	width: 755px;
 	display: -webkit-box; /* wkhtmltopdf uses this one */
 	-webkit-box-orient: vertical; 
     -webkit-box-align: center; /* WebKit */
 	margin: 0;
 	padding: 0;
+	overflow: visible;
+	list-style: none;
 }
 
 
@@ -59,54 +62,76 @@ main {
 	display: -webkit-box;
 	-webkit-box-align: start;
 	width: 670px;
+	margin-bottom: 40px;
 }
+
 
 .logo {
 	width: 160px;
-	height: 160px;
+	height: auto;
 	margin-right: 30px;
 }
 
+
 .experiment_header_text {
+	margin-top: 20px;
 	width: 480px;
 }
 
+
+.exp-adult-supervision {
+	color: red;
+	border: 2px solid;	
+	padding: 10px;
+	margin-top: 5px;
+	margin-bottom: 14px;
+	width: 270px;
+}
+
 .exp-intro {
-	font-size: 11px;
+	line-height: 20px;
+}
+
+.inner-container {
+	display: -webkit-box;
+	-webkit-box-orient: vertical; 
+    -webkit-box-align: center; 
+    overflow: visible;
+	list-style: none;
 }
 
 
 .exp-ingredients {
-	display: -webkit-box; /* wkhtmltopdf uses this one */
-	-webkit-box-orient: vertical; 
-    -webkit-box-align: center; /* WebKit */
-	width: 780px;
+	width: 670px;
+	margin-bottom: 55px;
 }
 
 
-.ingredients-sub-wrap {
-	display: -webkit-box;
-	-webkit-box-align: start;
-	-webkit-box-pack: end;
+.exp-ingrendients-image {
+	float: left;
+	margin-right: 30px;
+	display: inline-block;
 }
 
 .ingredients-sub-wrap ul {
-	width: 250px;
+	/*text-align: right;*/
+	display: inline-block;
 }
 
 .ingredients-sub-wrap li {
-	width: 240px;
+	max-width: 310px;
+	margin-bottom: 3px;
+	line-height: 20px;
 }
 
-.exp-ingrendients-image {
-	margin-right: 40px;
-}
 
 
 .exp-directions {
-	display: -webkit-box; /* wkhtmltopdf uses this one */
+/*	display: -webkit-box; 
 	-webkit-box-orient: vertical; 
-    -webkit-box-align: center; /* WebKit */
+    -webkit-box-align: center; */
+    overflow: visible;
+	list-style: none;
 }
 
 .exp-directions ul{
@@ -114,34 +139,47 @@ main {
 	position: relative;
 	overflow: visible;
 	list-style: none;
+	display: -webkit-box;
+	-webkit-box-orient: vertical; 
+    -webkit-box-align: center; 
 }
 
 .exp-directions li {
 	position: relative;
 	overflow: visible;
-	display: -webkit-box;
-	-webkit-box-align: start; 
-	-webkit-box-pack: center;
 	margin-bottom: 50px;
+	width: 670px;
+	line-height: 20px;
+	page-break-inside:avoid;
+}
+
+.wrap {
+	display: inline-block;
+	float: left;
 }
 
 .exp-direction-index {
-	position: absolute;
-	top: 0;
-	left: -15px;
-	color: white;
 	height: 45px;
-	line-height: 45px;
 	width: 26px;
-	font-size: 30px;
+	color: white;
+	line-height: 48px;
+	font-size: 33px;
+	font-family: BebasNeue-Bold;
 	text-align: center;
 }
 
 
 .exp-direction-content {
-	width: 250px;
-	margin-top: 15px;
-	margin-right: 40px;
+	width: 300px;
+	padding-top: 15px;
+	line-height: 20px;
+	page-break-inside:avoid;
+}
+
+.exp-direction-images {
+	display: inline-block;
+	float: right;
+	margin-left: 40px;
 }
 
 
@@ -149,22 +187,32 @@ main {
 	display: -webkit-box; /* wkhtmltopdf uses this one */
     -webkit-box-pack: center; /* WebKit */
 	width: 670px;
+	page-break-before: always;
 }
 
 .exp-warning {
+	display: -webkit-box;
+	-webkit-box-orient: vertical; 
+    -webkit-box-align: center;
 	width: 250px;
-	border: 1px solid;
+	border: 2px solid;
 	border-color: red;
 	padding: 15px 30px;
+	margin-bottom: 40px;
+
 }
 
 .exp-warning h4 {
+	width: 150px;
+	padding: 5px 2px 5px 5px;
+	margin-bottom: 20px;
 	text-align: center;
-	padding: 15px;
 	font-size: 25px;
 	line-height: 25px;
-	border-bottom: 1px solid;
+	color: black;
+	border-bottom: 2px solid;
 	border-color: red;
+	page-break-before: always;
 }
 
 .exp-explanation {
@@ -172,49 +220,17 @@ main {
 	display: -webkit-box; /* wkhtmltopdf uses this one */
 	-webkit-box-orient: vertical; 
     -webkit-box-align: center; /* WebKit */
+  	line-height: 20px;
+	page-break-before: always;
 }
 
 
 
-
-
-
-.category-font-color.biologia {
-	color: #98d84d !important;
+.category-font-color {
+	color: #2c1a4d !important;
 }
 
-.category-font-color.injineria {
-	color: #40b4f1 !important;
-}
 
-.category-font-color.astronomia {
-	color: #5e439c !important;
-}
-
-.category-font-color.qimia {
-	color: #f9a334 !important;
-}
-
-.category-font-color.fizika {
-	color: #576adc !important;
-}
-
-.category-background-color.biologia {
-	background-color: #98d84d !important;
-}
-
-.category-background-color.injineria {
-	background-color: #40b4f1 !important;
-}
-
-.category-background-color.astronomia {
-	background-color: #5e439c !important;
-}
-
-.category-background-color.qimia {
-	background-color: #f9a334 !important;
-}
-
-.category-background-color.fizika {
-	background-color: #576adc !important;
+.category-background-color {
+	background-color: #2c1a4d !important;
 }
