set pdf filename; added pdf to admin exp too

--- a/app/views/shared/_experiment_show.html.erb
+++ b/app/views/shared/_experiment_show.html.erb
@@ -166,7 +166,7 @@
 
   <div class='exp-links'>
     <div class="pdf-download category-background-color <%=category_slug%>">
-      <%= link_to t('.pdf_download'), params.merge(:format => 'pdf') %>
+      <%= link_to t('.pdf_download'), params.merge(:format => 'pdf'), target: :blank %>
     </div>
     <div class="addthis_toolbox addthis_default_style"  addthis:url="<%= current_url %>">
       <a class="addthis_button_facebook_like" fb:like:layout="button_count"></a>
