--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -4,6 +4,11 @@
 	<%= simple_format( t('.text') ) %>
 </div>
 
-<div class='about-funding'>
+<div class='about-funding'  style="text-align: center;">
 	<%= t('.funding') %>
+
+</div>
+
+<div style="text-align: center;">
+  <%= image_tag('embassy_logo.gif', width: 250) %>
 </div>
