Update about page

--- a/app/assets/stylesheets/components/app_footer.scss
+++ b/app/assets/stylesheets/components/app_footer.scss
@@ -29,6 +29,7 @@ main {
   height: $footer-height;
 
   .date {
+    margin: 0;
     margin-right: 5px;
     padding-right: 5px;
     border-right: 2px solid;
