--- a/app/views/root/about.html.erb
+++ b/app/views/root/about.html.erb
@@ -4,11 +4,11 @@
 	<%= simple_format( t('.text') ) %>
 </div>
 
-<div class='about-funding'  style="text-align: center;">
+<div class='about-funding'>
 	<%= t('.funding') %>
 
 </div>
 
-<div style="text-align: center;">
+<div>
   <%= image_tag('embassy_logo.gif', width: 250) %>
 </div>
