--- a/app/assets/stylesheets/about.scss
+++ b/app/assets/stylesheets/about.scss
@@ -101,10 +101,11 @@ body.about {
  		text-align: left;
 	}
 
-	body.about 	main .about-funding {
+	body.about 	main .container .about-funding {
 		align-items: flex-start;
  		text-align: left;
 	}
+
 }
 
 @media screen and (max-width: 500px) {
