--- a/config/nginx_ssl.conf.erb
+++ b/config/nginx_ssl.conf.erb
@@ -4,7 +4,7 @@ upstream puma_<%= application %> {
 
 server {
   listen 80;
-  server_name <%= web_url %>;
+  server_name <%= web_url %> <%= secondary_web_url %>;
   return 301 https://$server_name$request_uri;
 }
 
@@ -13,7 +13,7 @@ server {
   #  listen 443 ssl http2 default deferred;
   listen 443 ssl http2;
 
-  server_name <%= web_url %>;
+  server_name <%= web_url %> <%= secondary_web_url %>;
   root <%= full_current_path %>/public;
   try_files $uri/index.html $uri @puma_<%= application %>;
 
