--- a/config/nginx_ssl.conf.erb
+++ b/config/nginx_ssl.conf.erb
@@ -4,6 +4,7 @@ upstream puma_<%= application %> {
 
 server {
   listen 80;
+  listen [::]:80;
   server_name <%= web_url %> <%= secondary_web_url %>;
   return 301 https://$server_name$request_uri;
 }
@@ -12,6 +13,7 @@ server {
   ### there can only be one default and deferred on a server
   #  listen 443 ssl http2 default deferred;
   listen 443 ssl http2;
+  listen [::]:443 ssl http2;
 
   server_name <%= web_url %> <%= secondary_web_url %>;
   root <%= full_current_path %>/public;
